--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-
-    <link href='node_modules/@govtechsg/sgds/css/sgds.util.css' rel='stylesheet' type='text/css' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
-        type='text/css' />
+  <head>
+    <link
+      href="node_modules/@govtechsg/sgds/css/sgds.util.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script data-shoelace="node_modules/@shoelace-style/shoelace/dist"></script>
-    <script type="module" src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"></script>
+    <script
+      type="module"
+      src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"
+    ></script>
 
     <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
     <style>
-        * {
-            font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
+      * {
+        font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI",
+          Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
+          sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+          "Noto Color Emoji";
+      }
 
-        sgds-footer::part(footer-bottom) {
-            background-color: red;
-        }
+      sgds-footer::part(footer-bottom) {
+        background-color: red;
+      }
 
-        /* sgds-sidenav-item::part(sidenav-btn) {
+      /* sgds-sidenav-item::part(sidenav-btn) {
             color: red;
             border-left-color: red;
         }
@@ -27,17 +38,17 @@
             color: red;
         } */
 
-        sgds-sidenav-item {
-            --sidenav-theme-color: orange;
-            /* --sidenav-font-size: 40rem; */
-        }
+      sgds-sidenav-item {
+        --sidenav-theme-color: orange;
+        /* --sidenav-font-size: 40rem; */
+      }
 
-        sgds-masthead {
-            --sgds-masthead-crest-color: white;
-            --sgds-masthead-text-color: red;
-        }
+      sgds-masthead {
+        --sgds-masthead-crest-color: white;
+        --sgds-masthead-text-color: red;
+      }
 
-        /* body {
+      /* body {
             display: flex;
             min-height: 100vh;
             flex-direction: column;
@@ -47,46 +58,66 @@
         } */
     </style>
     <script src="lib/index.js"></script>
-</head>
+  </head>
 
-<body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100">
     <sgds-masthead></sgds-masthead>
-    <div class="container">
-        <br />
-        <sgds-sidenav class="mt-3" id="test-id">
-            <sgds-sidenav-item active>
-                <span slot="title">
-                    <sl-icon name="stack"></sl-icon> Title
-                </span>
-                <sgds-sidenav-link href="https://google.com" active>first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-            </sgds-sidenav-item>
-            <sgds-sidenav-item title="Test title 2" active>
-                <span slot="title">Title</span>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+    <sgds-checkbox>Checkbox</sgds-checkbox>
 
-            </sgds-sidenav-item>
-            <sgds-sidenav-item title="Test title 2">
-                <span slot="title">Title</span>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-                <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-            </sgds-sidenav-item>
-            <sgds-sidenav-item title="Test title 2" href="#">
-                <span slot="title">Title</span>
-            </sgds-sidenav-item>
-            <sgds-sidenav-item title="Test title 2" href="#">
-                <span slot="title">Title</span>
-            </sgds-sidenav-item>
-        </sgds-sidenav>
-        <br />
-        <button-element class="flex-grow-1">Hello World</button-element>
+    <div class="container">
+      <br />
+      <sgds-sidenav class="mt-3" id="test-id">
+        <sgds-sidenav-item active>
+          <span slot="title"> <sl-icon name="stack"></sl-icon> Title </span>
+          <sgds-sidenav-link href="https://google.com" active
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2" active>
+          <span slot="title">Title</span>
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2">
+          <span slot="title">Title</span>
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+          <sgds-sidenav-link href="https://google.com"
+            >first-test</sgds-sidenav-link
+          >
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2" href="#">
+          <span slot="title">Title</span>
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2" href="#">
+          <span slot="title">Title</span>
+        </sgds-sidenav-item>
+      </sgds-sidenav>
+      <br />
+      <button-element class="flex-grow-1">Hello World</button-element>
     </div>
-    <sgds-footer description="this is a prop description" title="Singapore Government Design System"
-        lastUpdatedDate="08 Feb 2022" links='[
+    <sgds-footer
+      description="this is a prop description"
+      title="Singapore Government Design System"
+      lastUpdatedDate="08 Feb 2022"
+      links='[
         {
             "title": "Column 1",
             "links" : [
@@ -234,9 +265,8 @@
                 }
             ]
         }
-      ]'>
+      ]'
+    >
     </sgds-footer>
-
-</body>
-
+  </body>
 </html>
