feat(input): add input

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <sgds-input></sgds-input>
+        </div>
     </div>
     <sgds-footer description="this is a prop description" title="Singapore Government Design System"
         lastUpdatedDate="08 Feb 2022" links='[
