--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     id="dev-console-gateway"
     src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
   ></script>
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -77,7 +76,6 @@
 <body class="d-flex flex-column min-vh-100">
     <sgds-mainnav expand="never" mode="offcanvas">
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
-
         <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
         <sgds-mainnav-item href="#">About</sgds-mainnav-item>
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
@@ -85,8 +83,11 @@
 
     <sgds-masthead></sgds-masthead>
     <div class="container">
-        <dropdown-element></dropdown-element>
-        <br />
+        <sgds-dropdown buttonText="Dropdown">
+            <sgds-dropdown-item value="1">test</sgds-dropdown-item>
+            <sgds-dropdown-item href="#" value="2">test</sgds-dropdown-item>
+            <sgds-dropdown-item href="#" value="3">test</sgds-dropdown-item>
+          </sgds-dropdown>        <br />
         <sgds-sidenav class="mt-3" id="test-id">
             <sgds-sidenav-item active>
                 <span slot="title">
