--- a/index.html
+++ b/index.html
@@ -160,13 +160,16 @@
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
-                    <sgds-input iconName="search" autofocus pattern="[A-Za-z]{5}" required></sgds-input>
+                    <form action="">
+                    <sgds-input iconName="search" label="Required" autofocus pattern="[A-Za-z]{5}" required feedback="Please key in 5 alphabets"></sgds-input>
+                </form>
                 </div>
                 <div class="col-6 mb-2">
-                    <form>
-                    <sgds-input iconName="search" autofocus pattern="[A-Za-z]{5}" required></sgds-input>
-                    <sgds-button type="submit">Submit</sgds-button>
-                </form>
+                    <sgds-input iconName="search" label="Not Required"></sgds-input>
+                </div>
+
+                <div class="col-6 mb-2">
+                    <sgds-input iconName="search" label="Not Required" required></sgds-input>
                 </div>
                 <!-- <div class="col-6 mb-2">
                     <sgds-input disabled placeholder="i am disabled"></sgds-input>
