test(input): update unit test

--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
+                    <sgds-input id="test-id"></sgds-input>
+                    <sgds-input iconName='search' id="defaultID"></sgds-input>
+                </div>
+                <div class="col-6 mb-2">
                     <form action="">
                     <sgds-input iconName="search" label="Required" autofocus pattern="[A-Za-z]{5}" required feedback="Please key in 5 alphabets"></sgds-input>
                 </form>
