--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             --sgds-masthead-text-color: red;
         }
         sgds-mainnav-item {
-            --sgds-mainnav-item-theme-color:red;
+            --mainnav-item-theme-color:red;
         }
 
         body {
@@ -69,11 +69,16 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <sgds-mainnav expand="never" mode="offcanvas">
+    <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
         <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
         <sgds-mainnav-item href="#">About</sgds-mainnav-item>
+        <sgds-mainnav-item href="#" slot="end">Info</sgds-mainnav-item>
+        <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
+        <sgds-mainnav-item href="#" slot="end">
+            <sgds-button>Login</sgds-button>
+        </sgds-mainnav-item>
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
     </sgds-mainnav>
 
