--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
         <sgds-mainnav-item href="#">About</sgds-mainnav-item>
         <sgds-mainnav-item href="#" slot="end">Info</sgds-mainnav-item>
         <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
-        <sgds-mainnav-item href="#" slot="end">
-            <sgds-button>Login</sgds-button>
-        </sgds-mainnav-item>
+            <sgds-button slot="end">Login</sgds-button>
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
     </sgds-mainnav>
 
