--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
             <div class="row">
                 <div class="col-6 mb-2">
                     <form action="">
-                        <sgds-input id="test-id"></sgds-input>
+                        <sgds-input id="test-id" required pattern="abc"></sgds-input>
+                        <sgds-button type="submit">Submit</sgds-button>
+                        <sgds-button type="reset">Reset</sgds-button>
                     </form>
                     <sgds-input id="test-id"></sgds-input>
                     <sgds-input iconName='search' id="defaultID"></sgds-input>
