docs(masthead): update padding-x value

--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <sgds-masthead></sgds-masthead>
-    <sgds-masthead fluid></sgds-masthead>
+    <div>
+        <sgds-masthead></sgds-masthead>
+        <sgds-masthead fluid></sgds-masthead>
+    </div>
+    
     <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
