--- a/index.html
+++ b/index.html
@@ -162,50 +162,13 @@
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
-                    <form action="">
-                        <sgds-input id="test-id" required pattern="abc" value="test"></sgds-input>
-                        <sgds-button type="submit">Submit</sgds-button>
-                        <sgds-button type="reset">Reset</sgds-button>
-                    </form>
-                    <sgds-input id="test-id"></sgds-input>
-                    <sgds-input iconName='search' id="defaultID"></sgds-input>
-                </div>
-                <div class="col-6 mb-2">
-                    <form action="">
-                    <sgds-input iconName="search" label="Required" autofocus pattern="[A-Za-z]{5}" required feedback="Please key in 5 alphabets"></sgds-input>
-                </form>
-                </div>
-                <div class="col-6 mb-2">
-                    <sgds-input iconName="search" label="Not Required"></sgds-input>
-                </div>
+                    <form action="" method="post">
 
-                <div class="col-6 mb-2">
-                    <sgds-input iconName="search" label="Not Required" required></sgds-input>
+                        <sgds-button type="submit">Submit</sgds-button>
+
+                    </form>
                 </div>
-                <div class="col-6 mb-2">
-                    <sgds-input id="abc" pattern="abc" required></sgds-input>
-                </div>
-                <!-- <div class="col-6 mb-2">
-                    <sgds-input disabled placeholder="i am disabled"></sgds-input>
-                </div>
-                <div class="col-6 mb-2">
-                    <sgds-input value="this is a readonly" readonly></sgds-input>
-                </div>
-                <div class="col-6 mb-2">
-                    <sgds-input label="type = number" type="number" placeholder="key in a number"></sgds-input>
-                </div>
-                <div class="col-6 mb-2">
-                    <sgds-input label="with left icon" iconName="search"></sgds-input>
-                </div>
-                <div class="col-6">
-                    <sgds-input label="validation with pattern" pattern="[A-Za-z]{3}" iconName="stack" wasValidated required></sgds-input>
-                </div>
-                <div class="col-6">
-                    <sgds-input feedback="must contain at least 3 letters" hintText="this is a hint text" value="sgd" label="validation with pattern" pattern="[A-Za-z]{3}" wasValidated required></sgds-input>
-                </div> -->
             </div>
-            
-           
         </div>
 
     </main>
@@ -361,6 +324,14 @@
       ]'>
     </sgds-footer>
 </div>  
+<script>
+    const button = document.querySelector('sgds-button[variant="primary"');
+    button.addEventListener('submit', submitHandler);
+    function submitHandler(event){
+        event.preventDefault();
+        alert("submitted")
+    }
+</script>
 </body>
 
 </html>
