test(input, buttonz): add more tests

--- a/index.html
+++ b/index.html
@@ -162,11 +162,10 @@
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
-                    <form action="" method="post">
-
+                    <form>
+                        <sgds-input required pattern="test" value="a"></sgds-input>
                         <sgds-button type="submit">Submit</sgds-button>
-
-                    </form>
+                      </form> 
                 </div>
             </div>
         </div>
