fix(checkbox): added form controller to checkbox comp, refix some props

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
     id="dev-console-gateway"
     src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
   ></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
+        body {
+            margin:0;
+            padding:0;
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
 
-        sgds-footer::part(footer-bottom) {
+        sgds-footer::part(footer-bottom) {  
             background-color: red;
         }
 
@@ -31,35 +39,43 @@
         sgds-sidenav-link::part(sidenav-anchor) {
             color: red;
         } */
-        .grid{
-            /* display: grid; */
-            grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
-            gap:0.5rem;
-        }
 
-        .grid + .grid{
-            margin-top: 1rem;
-        }
+        .grid{
+            display: grid;
+            grid-template-areas: 
+            "masthead masthead masthead "
+            "nav nav nav "
+            "sidenav main main "
+            "footer footer footer ";
+            grid-template-columns: 240px repeat(2,1fr);
+            width: 100%;
+        }   
 
         sgds-sidenav-item {
             --sidenav-theme-color: orange;
-            /* --sidenav-font-size: 40rem; */
         }
 
         sgds-masthead {
             --sgds-masthead-crest-color: white;
             --sgds-masthead-text-color: red;
+            grid-area: masthead;
+        }
+        sgds-sidenav{
+            grid-area: sidenav;
+
+        }
+        sgds-mainnav{
+            grid-area: nav;
+        }
+        main{
+            padding: 1rem;
+            grid-area: main;
+        }
+        sgds-footer{
+            grid-area: footer;
         }
         sgds-mainnav-item {
-            --sgds-mainnav-item-theme-color:red;
-        }
-
-        body {
-            margin:0;
-            padding:0;
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
+            --mainnav-item-theme-color:red;
         }
         sgds-button{
             flex: 1;
@@ -68,85 +84,96 @@
     <script src="lib/index.js"></script>
 </head>
 
-<body class="d-flex flex-column min-vh-100"></body>
-    <script type="module">
-      const checkbox1 = document.querySelector("sgds-checkbox#checkbox1");
-      checkbox1.addEventListener("sgds-checkbox", (event) => {
-        event.preventDefault();
-        console.log(event.target.value);
-      });
+<body class="d-flex flex-column min-vh-100">
+    <sgds-masthead fluid></sgds-masthead>
+    <sgds-mainnav>
+        <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
-      const checkbox3 = document.querySelector("sgds-checkbox#checkbox3");
-      checkbox3.addEventListener("sgds-checkbox", (event) => {
-        event.preventDefault();
-        console.log(event.target.value);
-      });
-    </script>
-  </head>
-
-  <body class="d-flex flex-column min-vh-100">
-      <br />
-      <sgds-masthead></sgds-masthead>
-      <br/>
-      <div class="container">
-        <sgds-checkbox value="1" id="checkbox1" ariaLabel="checkboxlabel" showFeedback
-      >Checkbox<div slot="feedback">asdasd</div></sgds-checkbox
-    >
-    <sgds-checkbox value="2" disabled>Checkbox</sgds-checkbox>
-    <sgds-checkbox value="3" id="checkbox3" isValid
-      >Checkbox</sgds-checkbox
-    >
-    <sgds-checkbox value="4" isInvalid required showFeedback
-      >Checkbox<div slot="feedback">asdasd</div></sgds-checkbox
-    >
-      <br />
-      <sgds-sidenav class="mt-3" id="test-id">
+        <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
+        <sgds-mainnav-item href="#">About</sgds-mainnav-item>
+        <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
+        <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
+            <sgds-button slot="end">Login</sgds-button>
+        <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
+    </sgds-mainnav>
+    <sgds-sidenav class="mt-3" id="test-id">
         <sgds-sidenav-item active>
-          <span slot="title"> <sl-icon name="stack"></sl-icon> Title </span>
-          <sgds-sidenav-link href="https://google.com" active
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2" active>
-          <span slot="title">Title</span>
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
+            <span slot="title">
+                <sl-icon name="stack"></sl-icon> Title
+            </span>
+            <sgds-sidenav-link href="https://google.com" active>first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
         </sgds-sidenav-item>
         <sgds-sidenav-item title="Test title 2">
-          <span slot="title">Title</span>
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
+            <span slot="title"><sl-icon name="stack"></sl-icon> Title</span>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2">
+            <span slot="title">Title</span>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
         </sgds-sidenav-item>
         <sgds-sidenav-item title="Test title 2" href="#">
-          <span slot="title">Title</span>
+            <span slot="title">Title</span>
         </sgds-sidenav-item>
         <sgds-sidenav-item title="Test title 2" href="#">
-          <span slot="title">Title</span>
+            <span slot="title">Title</span>
         </sgds-sidenav-item>
-      </sgds-sidenav>
-      <br />
-      <button-element class="flex-grow-1">Hello World</button-element>
-    </div>
+    </sgds-sidenav>
+    
+    <main>
+        <div class="container">
+            <h2>Button</h2>
+            <p>Button size</p>
+            <div class="row">
+                <div class="grid">
+                    <sgds-button size="sm" variant="primary">Hello World</sgds-button>
+                    <sgds-button variant="primary" active>Hello World</sgds-button>
+                    <sgds-button size="lg" variant="primary">Hello World</sgds-button>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <p>Variant</p>
+            <div class="row">
+                <div class="grid">
+                    <sgds-button variant="primary">
+                        Primary
+                    </sgds-button>
+                    <sgds-button variant="outline-secondary">Outline</sgds-button>
+                    <sgds-button variant="success" disabled>Disabled</sgds-button>
+                    <sgds-button variant="success" href="#">Link button</sgds-button>
+                    <sgds-button variant="warning" href="#" target="_blank" disabled>
+                        Link button _blank
+                    </sgds-button>
+                    <sgds-button variant="danger" download="logo.svg">
+                        Link button _blank
+                    </sgds-button>
+                </div>
+            </div>
+        </div>
+        
+        <div class="container">
+            <h2>Input</h2>
+            <div class="row">
+                <div class="col-6 mb-2">
+                    <form>
+                        <sgds-input name="input1" id="input1" pattern="test" required></sgds-input>
+                        <sgds-checkbox name="cb1" id="cb1" value="lolol">I have read the terms and conditions.<span slot="feedback">You are required to check this.</span></sgds-checkbox>
+                        <sgds-checkbox name="cb2" id="cb2" value="lolol1" required>I have read the terms and conditions.<span slot="feedback">You are required to check this.</span></sgds-checkbox>
+                        <sgds-checkbox name="cb3" id="cb3" value="lolol2" disabled>I have read the terms and conditions.<span slot="feedback">You are required to check this.</span></sgds-checkbox>
+                        <sgds-button id="submitButton" type="submit">Submit</sgds-button>
+                      </form> 
+                </div>
+            </div>
+        </div>
+
+    </main>
     <sgds-footer description="this is a prop description" title="Singapore Government Design System"
         lastUpdatedDate="08 Feb 2022" links='[
         {
@@ -298,6 +325,59 @@
         }
       ]'>
     </sgds-footer>
+</div>  
+<script>
+    // const cb = document.querySelector('sgds-checkbox#haha');
+    // cb.addEventListener('sgds-change', (e) => {
+    //     e.preventDefault();
+    //     console.log(e);
+    // });
 
+    // const input = document.querySelector('sgds-checkbox#hehe');
+    // input.addEventListener('sgds-change', (e) => {
+    //     e.preventDefault();
+    //     console.log(e);
+    // }); 
+
+// } ;
+
+
+// grab reference to form
+
+const formElem = document.querySelector('form');
+
+// submit handler
+
+formElem.addEventListener('submit', (e) => {
+  // on form submission, prevent default
+  e.preventDefault();
+
+//   console.log(formElem.shadowRoot?.querySelector('input[name="input1"]'));
+//   console.log(formElem.shadowRoot?.querySelector('input[name="cb1"]')); 
+//   console.log(formElem.shadowRoot?.querySelector('input[name="cb2"]')); 
+
+  // construct a FormData object, which fires the formdata event
+  const formData = new FormData(formElem);
+  // formdata gets modified by the formdata event
+  console.log(formData.get('input1')); 
+  console.log(formData.get('cb1')); 
+  console.log(formData.get('cb2'));
+});
+
+// formdata handler to retrieve data
+
+// formElem.addEventListener('formdata', (e) => {
+//   console.log('formdata fired');
+
+//   // modifies the form data
+//   const formData = e.formData;
+//   // formdata gets modified by the formdata event
+//   formData.set('cb1', formData.get('cb1').toUpperCase());
+//   formData.set('cb2', formData.get('cb2').toUpperCase());
+// });
+
+ 
+</script>
 </body>
+
 </html>
