feat(quantitytog): add quantity toggle

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                         <sgds-input required pattern="test" value="a"></sgds-input>
                         <sgds-button type="submit">Submit</sgds-button>
                       </form> 
+                      <sgds-quantitytoggle></sgds-quantitytoggle>
                 </div>
             </div>
         </div>
