refactor(input): label should show if attribute is defined

--- a/index.html
+++ b/index.html
@@ -163,7 +163,13 @@
             <div class="row">
                 <div class="col-6 mb-2">
                     <form>
-                        <sgds-input required pattern="test" value="a"></sgds-input>
+                        <sgds-input label="Name" iconName="stack" hintText="this is a hint" required pattern="test" value="a"></sgds-input>
+                        <sgds-button type="submit">Submit</sgds-button>
+                      </form> 
+                </div>
+                <div class="col-6 mb-2">
+                    <form>
+                        <sgds-input inputId="test-id" label="label"></sgds-input>
                         <sgds-button type="submit">Submit</sgds-button>
                       </form> 
                 </div>
