--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-    <script type="module" src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"></script>
     <script
     type="module"
     id="dev-console-gateway"
     src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
   ></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script>
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -176,6 +175,16 @@
                         <sgds-checkbox name="cb2" id="cb2" value="lolol1" required disabled>disabled<span slot="feedback">You are required to check this.</span></sgds-checkbox>
                         <sgds-button id="submitButton" type="submit">Submit</sgds-button>
                       </form> 
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <h2>Quantity Toggle</h2>
+            <div class="row">
+                <div class="col is-6">
+                    <sgds-quantitytoggle step="1" count="5" quanttoggleId="heyhey"></sgds-quantitytoggle>
+                    <sgds-quantitytoggle step="10" count="5" disabled></sgds-quantitytoggle>
+                    <sgds-quantitytoggle step="10" count="5"></sgds-quantitytoggle>
                 </div>
             </div>
         </div>
@@ -334,7 +343,8 @@
     </sgds-footer>
 </div>  
 <script>
-    // const submitButton = document.querySelector('sgds-button#submitButton');
+    const submitButton = document.querySelector('sgds-quantitytoggle#heyhey');
+    console.log(submitButton)
     // submitButton.addEventListener('sgds-change', (e) => {
     //     e.preventDefault();
     //     console.log(e)
