--- a/index.html
+++ b/index.html
@@ -12,32 +12,42 @@
       rel="stylesheet"
       type="text/css"
     />
-    <script data-shoelace="node_modules/@shoelace-style/shoelace/dist"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <script
-      type="module"
-      src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
     ></script>
     <script
       type="module"
       id="dev-console-gateway"
       src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
     ></script>
-    <script>
-      const radio1 = document.querySelector("sgds-radiogroup");
-      if (radio1) {
-        radio1.addEventListener("sgds-change", (event) => {
-          event.preventDefault();
-          console.log(event.target.value);
-        });
-      }
-    </script>
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"
+    ></script>
     <style>
       * {
         font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI",
           Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
           sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
           "Noto Color Emoji";
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
       }
 
       sgds-footer::part(footer-bottom) {
@@ -51,60 +61,66 @@
         sgds-sidenav-link::part(sidenav-anchor) {
             color: red;
         } */
-      .grid {
-        /* display: grid; */
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 0.5rem;
-      }
 
-      .grid + .grid {
-        margin-top: 1rem;
+      .grid {
+        display: grid;
+        grid-template-areas:
+          "masthead masthead masthead "
+          "nav nav nav "
+          "sidenav main main "
+          "footer footer footer ";
+        grid-template-columns: 240px repeat(2, 1fr);
+        width: 100%;
       }
 
       sgds-sidenav-item {
         --sidenav-theme-color: orange;
-        /* --sidenav-font-size: 40rem; */
       }
 
       sgds-masthead {
         --sgds-masthead-crest-color: white;
         --sgds-masthead-text-color: red;
+        grid-area: masthead;
+      }
+      sgds-sidenav {
+        grid-area: sidenav;
+      }
+      sgds-mainnav {
+        grid-area: nav;
+      }
+      main {
+        padding: 1rem;
+        grid-area: main;
+      }
+      sgds-footer {
+        grid-area: footer;
       }
       sgds-mainnav-item {
-        --sgds-mainnav-item-theme-color: red;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
+        --mainnav-item-theme-color: red;
       }
       sgds-button {
         flex: 1;
       }
     </style>
     <script src="lib/index.js"></script>
-    <script type="module">
-      const radio = document.querySelector("sgds-radiogroup");
-      radio.addEventListener("sgds-change", (event) => {
-        event.preventDefault();
-        console.log(event.target.value);
-      });
-    </script>
   </head>
+  <script></script>
 
   <body class="d-flex flex-column min-vh-100">
-    <sgds-mainnav expand="never" mode="offcanvas">
+    <sgds-masthead fluid></sgds-masthead>
+    <sgds-mainnav>
       <img
         width="130"
         src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg"
         slot="brand"
       />
-
       <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
       <sgds-mainnav-item href="#">About</sgds-mainnav-item>
+      <sgds-mainnav-item href="#" slot="end" class="test test2"
+        >Info</sgds-mainnav-item
+      >
+      <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
+      <sgds-button slot="end">Login</sgds-button>
       <dev-console-widget
         slot="non-collapsible"
         iconColor="black"
@@ -112,71 +128,51 @@
         iconHeight="28px"
       ></dev-console-widget>
     </sgds-mainnav>
-
-    <sgds-masthead></sgds-masthead>
-    <div class="container">
-      <br />
-      <sgds-radiogroup>
-        <span slot="label">Label 1</span>
-        <sgds-radio value="1" isInline>Option 1</sgds-radio>
-        <sgds-radio value="2" isInline>Option 2</sgds-radio>
-        <sgds-radio value="3" isInline>Option 3</sgds-radio>
-      </sgds-radiogroup>
-
-      <sgds-radiogroup>
-        <span slot="label">Label 2</span>
-        <sgds-radio value="4">Option 4</sgds-radio>
-        <sgds-radio value="5">Option 5</sgds-radio>
-        <sgds-radio value="6">Option 6</sgds-radio>
-      </sgds-radiogroup>
-
-      <br />
-      <sgds-sidenav class="mt-3" id="test-id">
-        <sgds-sidenav-item active>
-          <span slot="title"> <sl-icon name="stack"></sl-icon> Title </span>
-          <sgds-sidenav-link href="https://google.com" active
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2" active>
-          <span slot="title">Title</span>
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2">
-          <span slot="title">Title</span>
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-          <sgds-sidenav-link href="https://google.com"
-            >first-test</sgds-sidenav-link
-          >
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2" href="#">
-          <span slot="title">Title</span>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2" href="#">
-          <span slot="title">Title</span>
-        </sgds-sidenav-item>
-      </sgds-sidenav>
-      <br />
-
+    <sgds-sidenav class="mt-3" id="test-id">
+      <sgds-sidenav-item active>
+        <span slot="title"> <sl-icon name="stack"></sl-icon> Title </span>
+        <sgds-sidenav-link href="https://google.com" active
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+      </sgds-sidenav-item>
+      <sgds-sidenav-item title="Test title 2">
+        <span slot="title"><sl-icon name="stack"></sl-icon> Title</span>
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+      </sgds-sidenav-item>
+      <sgds-sidenav-item title="Test title 2">
+        <span slot="title">Title</span>
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+        <sgds-sidenav-link href="https://google.com"
+          >first-test</sgds-sidenav-link
+        >
+      </sgds-sidenav-item>
+      <sgds-sidenav-item title="Test title 2" href="#">
+        <span slot="title">Title</span>
+      </sgds-sidenav-item>
+      <sgds-sidenav-item title="Test title 2" href="#">
+        <span slot="title">Title</span>
+      </sgds-sidenav-item>
+    </sgds-sidenav>
+    <main>
       <div class="container">
         <h2>Button</h2>
         <p>Button size</p>
@@ -185,6 +181,33 @@
             <sgds-button size="sm" variant="primary">Hello World</sgds-button>
             <sgds-button variant="primary" active>Hello World</sgds-button>
             <sgds-button size="lg" variant="primary">Hello World</sgds-button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h2>Card</h2>
+        <p>Action Card</p>
+        <div class="row">
+          <div class="col-4">
+            <sgds-action-card id="hoho" iconName="box" bgColor="primary"
+              ><span slot="card-subtitle">Laptop</span
+              ><span slot="card-title">Apple</span
+              ><span slot="card-text">Macbook Pro M1</span></sgds-action-card
+            >
+          </div>
+          <div class="col-4">
+            <sgds-action-card
+              ><span slot="card-subtitle">Laptop</span
+              ><span slot="card-title">Apple</span
+              ><span slot="card-text">Macbook Pro M1</span></sgds-action-card
+            >
+          </div>
+          <div class="col-4">
+            <sgds-action-card disabled
+              ><span slot="card-subtitle">Laptop</span
+              ><span slot="card-title">Apple</span
+              ><span slot="card-text">Macbook Pro M1</span></sgds-action-card
+            >
           </div>
         </div>
       </div>
@@ -205,7 +228,25 @@
           </div>
         </div>
       </div>
-    </div>
+
+      <div class="container">
+        <h2>Input</h2>
+        <div class="row">
+          <div class="col-6 mb-2">
+            <form id="a" novalidate>
+              <sgds-input required></sgds-input>
+              <sgds-radiogroup label="Select an option" required>
+                <sgds-radio value="1">1</sgds-radio>
+                <sgds-radio value="2">2</sgds-radio>
+                <sgds-radio value="3">3</sgds-radio>
+              </sgds-radiogroup>
+              <sgds-button type="submit" form="a" formNoValidate="true">Submit</sgds-button>
+            </form>
+            
+          </div>
+        </div>
+      </div>
+    </main>
     <sgds-footer
       description="this is a prop description"
       title="Singapore Government Design System"
