--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -8,4 +8,4 @@
     id="dev-console-gateway"
     src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
   ></script>
-  <script src="../lib/index.js"></script>
+  <script src="./lib/index.js"></script>
