--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                 </sgds-radiogroup>
         </div>
         <div class="container">
+            <h2>Selectable card</h2>
+               <sgds-action-card>asdasd</sgds-action-card>
+        </div>
+        <div class="container">
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
